--- a/capstone project 1/Travelling application/Capstone_project_16.html
+++ b/capstone project 1/Travelling application/Capstone_project_16.html
@@ -186,7 +186,7 @@
             <h1 class="yellow">Its Free!!</h1>
             <p class="last2">We're still in beta and we will be for awhile. As we add more <br> functionality, we'll look into other plans with more controls.</p>
             <button class="button4">Get Started</button>
-            <p class="last2">Copyright 2021 nicepage.com • <u>Terms of Service</u> •<u>Privacy Policy</u> </p>
+            <p class="last2">Copyright 2021 saginelas.com • <u>Terms of Service</u> •<u>Privacy Policy</u> </p>
         </div>
      </body> 
      <footer>
